fix(findus): align left

--- a/src/components/FindUs/FindUs.module.scss
+++ b/src/components/FindUs/FindUs.module.scss
@@ -87,6 +87,7 @@
     font: $text-rafine;
     color: $text-color;
     text-decoration: none;
+    text-align: left;
 }
 
 
